# music-dl

./: .gitignore  README.md  music_dl.py  pyproject.toml  setup_cdm.py
.github/: FUNDING.yml
