[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music-dl"
version = "0.1.0"
description = "Download music from Suno or other music platforms"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pywidevine>=1.8",
    "tqdm>=4.66",
]

[project.scripts]
music-dl = "music_dl:main"
music-dl-setup-cdm = "setup_cdm:main"

[tool.hatch.build.targets.wheel]
packages = ["music_dl.py", "setup_cdm.py"]
